--- a/src/styles/loginForm.module.scss
+++ b/src/styles/loginForm.module.scss
@@ -10,7 +10,7 @@
     width: 100%;
     height: 350px;
     margin-top: 25px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
     border-radius: 10px;
   }
   .loginForm{
@@ -34,6 +34,7 @@
   h1{
     margin-top: 35px;
     margin-bottom: 20px;
+    font-size: 30px;
     
   }
 
@@ -45,3 +46,9 @@
   .formLabel{
     color: rgb(177, 174, 174);
   }
+  
+  .error {
+    color: rgb(249, 8, 8);
+    margin-top: 2px;
+  }
+
